src/objects/Place_Order__c.object
<CustomObject>
    <description>Order Tracking</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Return requested</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Place Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>request_for_return</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Return requested</value>
        </filters>
        <label>Request for Return</label>
    </listViews>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>Orders Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Place Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Items_not_in_stock</fullName>
        <active>true</active>
        <description>Order can&apos;t be placed if the item is out of stock</description>
        <errorConditionFormula>(   Item__r.Stock_Remaining__c - Quantity__c  )  &lt; 0</errorConditionFormula>
        <errorMessage>The item is out of stock.</errorMessage>
    </validationRules>
</CustomObject>